WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
302013
REGRESSION(
302506@main
): Triggered assertions on visionOS Debug tester
https://bugs.webkit.org/show_bug.cgi?id=302013
Summary
REGRESSION(302506@main): Triggered assertions on visionOS Debug tester
Jonathan Bedard
Reported
2025-11-05 09:32:12 PST
After
302506@main
, we are triggering assertions on our visionOS Debug testers. 4 tests impacted: interaction-region/cursors.html [ Crash ] interaction-region/text-input-focused-edited-empty.html [ Crash ] navigation-api/navigation-object-is-replaceable.html [ Crash ] resize-observer/contain-instrinsic-size-should-not-leak-nodes.html [ Crash ] Test run:
https://build.webkit.org/#/builders/1705/builds/404
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-11-05 09:32:31 PST
<
rdar://problem/164096712
>
Andy Estes
Comment 2
2025-11-05 16:47:59 PST
Pull request:
https://github.com/WebKit/WebKit/pull/53492
EWS
Comment 3
2025-11-05 22:06:05 PST
Committed
302631@main
(49a8cc8d9856): <
https://commits.webkit.org/302631@main
> Reviewed commits have been landed. Closing PR #53492 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug